fix(titus): fix alignment of migration config fields (#5116)

--- a/app/scripts/modules/titus/src/migration/titusMigrationConfig.component.less
+++ b/app/scripts/modules/titus/src/migration/titusMigrationConfig.component.less
@@ -51,8 +51,11 @@ titus-migration-config {
   }
 
   .config-field {
-    display: inline-block;
     margin-right: 10px;
+  }
+
+  .ui-select-placeholder {
+    display: inline;
   }
 
   .migration-config-pipeline {
